<resources>
    <string name="app_name">Calculadora de combustível</string>
    <string name="fab_lista">Visualizar abastecimentos</string>
    <string name="fab_navegar">Encontrar o posto mais próximo</string>
    <string name="fab_consumo">Consumo em viagem</string>
    <string name="text_melhor_opcao">Descubra qual é o combustível mais vantajoso para o seu bolso!</string>
    <string name="input_edit_gasolina">Preço gasolina comum</string>
    <string name="input_edit_etanol">Preço etanol comum</string>
    <string name="input_edit_kml_gasolina"> km/l gasolina</string>
    <string name="input_edit_kml_etanol"> km/l etanol</string>
    <string name="botao_calcular">Calcular</string>

    <!-- Strings da tela custo viagem-->

    <string name="titulo_tela_viagem">Custo do combustível em viagem</string>
    <string name="input_edit_km_total_viagem">Estimativa da quilometragem percorrida</string>
    <string name="input_edit_gasolina_viagem">Preço gasolina comum</string>
    <string name="input_edit_etanol_viagem">Preço etanol comum</string>
    <string name="input_edit_kml_gasolina_viagem"> km/l gasolina</string>
    <string name="input_edit_kml_etanol_viagem"> km/l etanol</string>
    <string name="botao_calcular_viagem">Calcular</string>
    <string name="switch_gasolina">Gasolina</string>
    <string name="switch_etanol">Etanol</string>
    <string name="title_activity_lista">ListaActivity</string>
    <string name="coluna_gasolina">Gasolina</string>
    <string name="coluna_etanol">Etanol</string>
    <string name="linha_tanqueCombustivel">Consumo</string>
    <string name="linha_valor">Preço</string>
    
    <!-- Strings da tela adicionar abastecimento -->
    
    <string name="tipo_combustivel">Escolha o tipo do combustível abastecido</string>
    <string name="preco_pago">Preço do combustível</string>
    <string name="data_abastecimento">Data do abastecimento</string>
    <string name="titulo_tela_add_abastecimento">Adicionar abastecimento</string>
    <string name="menu_salvar">Adicionar</string>
    <string name="escolha_gasolina">Gasolina comum</string>
    <string name="escolha_etanol">Etanol Comum</string>
    <string name="formato_data">DD/MM/AAAA</string>

    <!-- Strings da tela lista de abastecimentos -->

    <string name="titulo_tela_lista">Lista de abastecimentos</string>

</resources>
