<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
    android:fillViewport="true">

<androidx.coordinatorlayout.widget.CoordinatorLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_behavior="com.google.android.material.transformation.FabTransformationSheetBehavior"
        app:menu_animationDelayPerItem="50"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_buttonSpacing="0dp"
        app:menu_colorNormal="@color/corEstilo"
        app:menu_colorPressed="@color/corEstilo"
        app:menu_colorRipple="@color/corFabPressionado"
        app:menu_fab_size="normal"
        app:menu_icon="@drawable/fab_add"
        app:menu_labels_colorNormal="#333333"
        app:menu_labels_colorPressed="#444444"
        app:menu_labels_colorRipple="#66FFFFFF"
        app:menu_labels_cornerRadius="3dp"
        app:menu_labels_ellipsize="none"
        app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        app:menu_labels_margin="0dp"
        app:menu_labels_maxLines="-1"
        app:menu_labels_padding="8dp"
        app:menu_labels_paddingBottom="4dp"
        app:menu_labels_paddingLeft="8dp"
        app:menu_labels_paddingRight="8dp"
        app:menu_labels_paddingTop="4dp"
        app:menu_labels_position="left"
        app:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        app:menu_labels_showShadow="true"
        app:menu_labels_singleLine="false"
        app:menu_labels_style="@style/custom_fab"
        app:menu_labels_textColor="#FFFFFF"
        app:menu_labels_textSize="14sp"
        app:menu_openDirection="up"
        app:menu_shadowColor="#66000000"
        app:menu_shadowRadius="4dp"
        app:menu_shadowXOffset="1dp"
        app:menu_shadowYOffset="3dp"
        app:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/localizarPosto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_navegar"
            app:fab_colorNormal="@color/corBase"
            app:fab_colorPressed="@color/corFabPressionado"
            app:fab_label="@string/fab_navegar"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/visualizarLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_lista"
            app:fab_colorNormal="@color/corBase"
            app:fab_colorPressed="@color/corFabPressionado"
            app:fab_label="@string/fab_lista"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/consumoViagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_consumo"
            app:fab_colorNormal="@color/corBase"
            app:fab_colorPressed="@color/corFabPressionado"
            app:fab_label="@string/fab_consumo"
            app:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="461dp"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/text_melhor_opcao"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/botaoCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/plano_de_fundo_botao_calc"
            android:onClick="botaoCalcular"
            android:text="@string/botao_calcular"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="307dp"
            android:layout_height="110dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="logo app"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_principal" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEtanol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_edit_etanol"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextGasolina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_edit_gasolina"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextKmlGasolina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_edit_kml_gasolina"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextKmlEtanol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_edit_kml_etanol"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

</ScrollView>